added an extra abstraction layer in country repository